--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 @layer base {
   html {
     @apply bg-[#FAFAFA];
-  }
+}
   * {
     font-family: "Raleway", sans-serif;
     @apply text-[#333333];
@@ -21,7 +21,20 @@
   .shadowFooter {
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.05);
   }
+  .shadowFormMain {
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.05);
+  }
+  .shadowCard {
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.05);
+  }
   input {
     @apply px-6 py-4 w-full placeholder:text-[#7A7A7A] leading-4 rounded-lg bg-white border border-[#D8D8D8];
+  }
+  .bgBlackCustom {
+    background: linear-gradient(
+      90deg,
+      rgba(0, 0, 0, 0.9) 0%,
+      rgba(0, 0, 0, 0) 100%
+    );
   }
 }
